tests/error/quotientInteger-wrong-2nd-argument-bytestring.uplc
(program 1.0.0[[(builtin quotientInteger)(con integer 10)](con bytestring #AFD3)])